# el-bot-de-soon

./: Makefile  bot2.py  main.py  procfile.txt  pyproject.toml  render_main.py  requirements.txt  start.sh
src/: config.py
src/handlers/: __init__.py  base.py  crypto.py  help.py  post.py  resume.py  solo_topic.py  token_query  token_query.py
src/services/: __init__.py  coingecko.py  coinmarketcap.py  crypto_mapper.py  openai.py  price_opinion.py  price_updater.py
src/utils/: classifier.py  filters.py  personality.py
tests/: test_classifier.py  test_handlers.py
